fix: startup warning